--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- 1. Load Local Tailwind Engine -->
-    <script src="tailwind.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"></script>
     
     <!-- 2. Configure Tailwind to match your design -->
     <script>
